--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  dnf-4.9.0.tar.gz: 2969613b3bf7866fa6280d0466bb2adb13b24cfe
+  "dnf-4.10.0.tar.gz": cad8de377a20b5cf6668eb4c4150248bfaa1ed20
