--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "dnf-4.13.0.tar.gz": f3d934c14068eef969a78f59924590611e7e0bf1
+  dnf-4.14.0.tar.gz: 0697aee277730c57446b5b87bdb12456cf245203
